@@ -4,6 +4,12 @@ if mods['ScienceCostTweakerM'] then
 
   seablock.lib.set_recipe_category('sct-t2-instruments', 'electronics')
   seablock.lib.set_recipe_category('sct-t2-wafer-stamp', 'electronics')
+  seablock.lib.set_recipe_category('sct-mil-circuit1', 'electronics')
+  seablock.lib.set_recipe_category('sct-mil-circuit2', 'electronics')
+  seablock.lib.set_recipe_category('sct-mil-circuit3', 'electronics')
+  seablock.lib.set_recipe_category('sct-prod-bioprocessor', 'electronics')
+  seablock.lib.set_recipe_category('sct-prod-overclocker', 'electronics-with-fluid')
+  seablock.lib.set_recipe_category('sct-prod-chipcase', 'electronics-with-fluid')
 
   bobmods.lib.recipe.remove_ingredient('chemical-science-pack', 'sct-t3-sulfur-lightsource')
 end
