@@ -13,7 +13,7 @@
     "angelspetrochem >= 0.9.21",
     "angelsrefining >= 0.12.1",
     "angelssmelting >= 0.6.18",
-    "bobelectronics >= 1.1.3",
+    "bobelectronics >= 1.1.4",
     "boblogistics >= 1.1.3",
     "bobplates >= 1.1.3",
 
